--- a/Features/WeatherForecast/Src/WeatherForecast.Api/appsettings.json
+++ b/Features/WeatherForecast/Src/WeatherForecast.Api/appsettings.json
@@ -1,10 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq",
+      "Serilog.Enrichers.ClientInfo"],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithProcessId",
+      "WithThreadId",
+      "WithClientIp",
+      "WithClientAgent"
+    ],
+    "Properties": {
+      "Application": "WeatherForecast.Api"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
